# tree-sitter-loveyoupeng

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-loveyoupeng.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_loveyoupeng/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLoveyoupeng/: loveyoupeng.h
bindings/swift/TreeSitterLoveyoupengTests/: TreeSitterLoveyoupengTests.swift
src/: grammar.json  node-types.json  parser.c
